fixed whitespace

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -37,7 +37,7 @@ body
                 top: 0
                 left: -10px
                 height: 100%
-                width: 50px
+                width: 60px
                 z-index: 1
         #page-right-border
                 position: fixed
